--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "server",
+  "name": "message-app",
   "version": "1.0.0",
-  "description": "",
+  "description": "simple message app using web sockets between client and server",
   "main": "index.js",
   "type": "module",
   "scripts": {
